--- a/htdocs/package.json
+++ b/htdocs/package.json
@@ -1,5 +1,5 @@
 {
     "name": "470cloud",
     "version": "Alpha 1.0",
-    "root": "C:\\xampp\\htdocs\\470cloud\\htdocs"
+    "root": "C:/xampp/htdocs/470cloud/htdocs"
 }
